backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blogmates-backend
  labels:
    app: blogmates-backend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: blogmates-backend
  template:
    metadata:
      labels:
        app: blogmates-backend
    spec:
      containers:
      - name: blogmates-backend
        image: vladstanciu/blogmates-backend:0.0.8
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
