fluent-bit-daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: fluent-bit
  namespace: monitoring
  labels:
    app: fluent-bit
spec:
  selector:
    matchLabels:
      app: fluent-bit
  template:
    metadata:
      labels:
        app: fluent-bit
    spec:
      serviceAccountName: fluent-bit
      containers:
      - name: fluent-bit
        image: fluent/fluent-bit:2.1.0
        volumeMounts:
          - name: config
            mountPath: /fluent-bit/etc/fluent-bit.conf
            subPath: fluent-bit.conf
          - name: varlog
            mountPath: /var/log
          - name: parsers
            mountPath: /fluent-bit/etc/parsers.conf
            subPath: parsers.conf
          - name: varlibdockercontainers
            mountPath: /var/lib/docker/containers
            readOnly: true
        resources:
          limits:
            memory: 500Mi
          requests:
            cpu: 100m
            memory: 200Mi
      volumes:
      - name: config
        configMap:
          name: fluent-bit-config
      - name: varlog
        hostPath:
          path: /var/log
      - name: parsers
        configMap:
          name: fluent-bit-parsers
          items:
            - key: parsers.conf
              path: parsers.conf
      - name: varlibdockercontainers
        hostPath:
          path: /var/lib/docker/containers
