backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  labels:
    app: backend
spec:
  selector:
    app: blogmates-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
