blogmates-backend-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: blogmates-backend-loadbalancer
  labels:
    app: blogmates-backend
spec:
  type: LoadBalancer
  selector:
    app: blogmates-backend
  ports:
    - port: 80
      targetPort: 8000
      name: http
