frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  selector:
    app: blogmates-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4173
