ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blogmates-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    nginx.ingress.kubernetes.io/client-body-buffer-size: "50m"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - blogmates-app.com
    secretName: blogmates-tls-secret
  rules:
  - host: blogmates-app.com
    http:
      paths:
      - path: /api/
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
